--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@Pa/Icons",
+  "name": "@pa/icons",
   "version": "1.0.0",
   "description": "SVG-based React icons",
   "keywords": [
